sets up navbar and footer with bulma

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,15 @@
     <%- include ('./partials/root/head-links.ejs') -%>
     <title>Grapevine</title>
 </head>
+
 <body>
-    
+<!-- NavBar -->
+<%- include ('./partials/root/navbar.ejs') -%>
+
+
+<!-- Footer -->
+<%- include ('./partials/root/footer.ejs') -%>
 </body>
+
+
 </html>
