--- a/views/partials/root/head-links.ejs
+++ b/views/partials/root/head-links.ejs
@@ -1,6 +1,11 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Bulma -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
+
+<!-- font awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+
 <link rel="stylesheet" href="/public/styles/main.css" />
 <!-- <script src="/public/scripts/app.js" defer></script> -->
