--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <!-- NavBar -->
 <%- include ('./partials/root/navbar.ejs') -%>
 
-
+<p> wallaballa dingdong</p>
 <!-- Footer -->
 <%- include ('./partials/root/footer.ejs') -%>
 </body>
