--- a/views/partials/root/head-links.ejs
+++ b/views/partials/root/head-links.ejs
@@ -6,6 +6,7 @@
 <!-- font awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-<link rel="stylesheet" href="/public/styles/main.css" />
+<!-- main.css -->
+<link rel="stylesheet" href="/styles/main.css">
 
 <!-- <script src="/public/scripts/app.js" defer></script> -->
