replaces bulma with bootstrap. resets navbar and footer. Imports bttn.css file for stylized button options

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -7,13 +7,14 @@
 
 <body>
     <!-- NavBar -->
-    <%- include ('./partials/root/navbar.ejs') -%>
-    <main class='main' style='min-height: 80vh;'>
-        <p> wallaballa dingdong</p>
+    <%- include ("./partials/root/navbar.ejs") -%>
+    
+
+    <main class="main">
+
     </main>
+    
     <!-- Footer -->
-    <%- include ('./partials/root/footer.ejs') -%>
+    <%- include ("./partials/root/footer.ejs") -%>
 </body>
-
-
 </html>
