--- a/views/partials/root/footer.ejs
+++ b/views/partials/root/footer.ejs
@@ -1,15 +1,16 @@
 
-<footer class="footer has-background-link-light">
+<footer class="card-footer ">
     <div class="content has-text-centered">
-        <p>
-            <strong> 
-                GRAPEVINE
-            </strong> 
-            by
-            <a href="https://www.linkedin.com/in/rodrigo-marron/">
-                Rodrigo Marrón
-            </a>
+        <div class=" clearfix">
 
-        </p>
+            <!-- Link -->
+            <ul class="nav-item active ">
+                <a class="nav-link text-light float-right" href="https://www.linkedin.com/in/rodrigo-marron/">
+                        GRAPEVINE by Rodrigo Marrón
+                </a>
+            </ul>
+            
+        </div>
+        <br />
     </div>
 </footer>
