--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,11 @@
 body {
-  background-color: black;
+  background-color: rgb(66, 66, 66);
+}
+
+.main {
+  min-height: 80vh;
+}
+
+.selector-for-some-widget {
+  box-sizing: content-box;
 }
