--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <%- include ('../partials/root/head-links.ejs') -%>
+    <%- include ("../partials/root/head-links.ejs") -%>
     <title>Grapevine</title>
 </head>
 
 <body>
     <!-- NavBar -->
-    <%- include ('../partials/root/navbar.ejs') -%>
+    <%- include ("../partials/root/navbar.ejs") -%>
     
-    <main class='main' style='min-height: 80vh;'>
+    <main class="main" style="min-height: 80vh;">
         <p> profile</p>
     </main>
+    
     <!-- Footer -->
-    <%- include ('../partials/root/footer.ejs') -%>
+    <%- include ("../partials/root/footer.ejs") -%>
 </body>
 
 
