creates partials/navbar folder for all navbar components. Adds sign up modal component

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,15 @@
+/*
+font-family: 'Staatliches', cursive;
+
+*/
+
 body {
   background-color: rgb(66, 66, 66);
 }
+
+/* .navbar-font {
+  font-family: "Staatliches", cursive;
+} */
 
 .main {
   min-height: 80vh;
