--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -7,7 +7,7 @@
 
 <body>
     <!-- NavBar -->
-    <%- include ("./partials/root/navbar.ejs") -%>
+    <%- include ("./partials/root/navbar/navbar.ejs") -%>
     
 
     <main class="main">
