--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -7,12 +7,10 @@
 
 <body>
     <!-- NavBar -->
-    <%- include ("./partials/root/navbar/navbar.ejs") -%>
+    <%- include ("./partials/root/navbar/0-navbar.ejs") -%>
     
 
-    <main class="main">
-
-    </main>
+    <main class="main"></main>
     
     <!-- Footer -->
     <%- include ("./partials/root/footer.ejs") -%>
