--- a/views/partials/root/footer.ejs
+++ b/views/partials/root/footer.ejs
@@ -1,12 +1,13 @@
 
 <footer class="card-footer ">
     <div class="content has-text-centered">
-        <div class=" clearfix">
+        <div class="clearfix">
 
             <!-- Link -->
             <ul class="nav-item active ">
-                <a class="nav-link text-light float-right" href="https://www.linkedin.com/in/rodrigo-marron/">
-                        GRAPEVINE by Rodrigo Marrón
+                <a class="nav-link text-light float-right" 
+                    href="https://www.linkedin.com/in/rodrigo-marron/">
+                        Grapevine by Rodrigo Marrón
                 </a>
             </ul>
             
