cleans up modal-register formatting

--- a/views/partials/root/navbar/modal-register.ejs
+++ b/views/partials/root/navbar/modal-register.ejs
@@ -37,8 +37,13 @@
                 <!-- STUB email -->
                     <p>
                         <label for="email">Email:</label>
-                        <input type="email" class="form-control" name="email" maxlength="25" minlength="2"
-                            placeholder="name@email.com" required>
+                        <input type="email" 
+                            class="form-control" 
+                            name="email" 
+                            maxlength="25" 
+                            minlength="2"
+                            placeholder="name@email.com" 
+                            required>
                     </p>
 
                 <!-- STUB password -->
@@ -56,8 +61,13 @@
                 <!-- STUB confirm password -->
                     <p>
                         <label for="password2">Confirm Password:</label>
-                        <input type="password" class="form-control" name="password2" maxlength="25" minlength="4"
-                            placeholder="Re-Enter Your Password" required>
+                        <input type="password" 
+                            class="form-control" 
+                            name="password2" 
+                            maxlength="25" 
+                            minlength="4"
+                            placeholder="Re-Enter Your Password" 
+                            required>
                     </p>
 
                 <!-- STUB modal footer -->
