--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
+<!-- STUB head-links -->
     <%- include ('./partials/root/head-links.ejs') -%>
+
     <title>Grapevine</title>
 </head>
 
+
 <body>
-    <!-- NavBar -->
+<!-- STUB navbar -->
     <%- include ("./partials/root/navbar/0-navbar.ejs") -%>
     
-
+<!-- STUB main -->
     <main class="main"></main>
     
-    <!-- Footer -->
+<!--STUB Footer -->
     <%- include ("./partials/root/footer.ejs") -%>
+
 </body>
 </html>
