updates server.js formatting

--- a/views/partials/root/navbar/modal-login.ejs
+++ b/views/partials/root/navbar/modal-login.ejs
@@ -11,7 +11,7 @@
 
                 <!--STUB modal title -->
                 <h5 class="content has-text-centered">
-                    Find your next opportunity through Grapevine
+                    Welcome Back
                 </h5>
                 <button type="button" 
                     class="close" 
@@ -37,21 +37,14 @@
                     <p>
                         <label for="email">Email:</label>
                         <input type="email" class="form-control" name="email" maxlength="25" minlength="2"
-                            placeholder="name@email.com" required>
+                            required>
                     </p>
 
                     <!-- STUB password -->
                     <p>
                         <label for="password">Password:</label>
                         <input type="password" class="form-control" name="password" maxlength="25" minlength="4"
-                            placeholder="25 characters max. 4 characters min required." required>
-                    </p>
-
-                    <!-- STUB confirm password -->
-                    <p>
-                        <label for="password2">Confirm Password:</label>
-                        <input type="password" class="form-control" name="password2" maxlength="25" minlength="4"
-                            placeholder="Re-Enter Your Password" required>
+                            required>
                     </p>
 
                     <!-- STUB modal footer -->
@@ -59,9 +52,9 @@
 
                         <!--STUB Existing Member -->
                         <p class="subtitle has-text-grey modal-dialog">
-                            Already have an account?
+                            New to Grapevine?
                             <a href="/login" class="button is-link">
-                                Log in
+                                Register
                             </a>
                         </p>
 
@@ -73,7 +66,7 @@
 
                         <!-- STUB sign up button -->
                         <button type="submit" class="btn btn-info">
-                            Join
+                            Log in
                         </button <input type="hidden" name="next" value="{{ next }}">
 
                     </div>
