updates profile model and  cleans up code

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,7 +3,7 @@
     
 <head>
 <!-- STUB head-links -->
-    <%- include ('./partials/root/head-links.ejs') -%>
+    <%- include ("./partials/root/head-links.ejs") -%>
 
     <title>Grapevine</title>
 </head>
