--- a/views/0-partials/root/navbar/0-navbar.ejs
+++ b/views/0-partials/root/navbar/0-navbar.ejs
@@ -1,5 +1,6 @@
 
-<nav class="navbar navbar-expand-lg card-header" />
+<nav class="navbar navbar-expand-lg card-header" 
+    id="logo-name"/>
 
 <!--ANCHOR * navbar LEFT SIDE * -->
 
