--- a/views/0-partials/root/navbar/dropdown-menu.ejs
+++ b/views/0-partials/root/navbar/dropdown-menu.ejs
@@ -13,11 +13,11 @@
     <div class="dropdown-menu" 
         aria-labelledby="navbarDropdown">
         <a class="dropdown-item" 
-            href="#">
+            href="/profile/home">
             My Profile
         </a>
         <a class="dropdown-item" 
-            href="#">
+            href="/mailbox">
             My Inbox
         </a>
 
@@ -25,7 +25,7 @@
         </div>
         
         <a class="dropdown-item" 
-            href="#">
+            href="/show-all">
             Search Leafs
         </a>
     </div>
