--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,7 +3,7 @@
     
 <head>
 <!-- STUB head-links -->
-    <%- include (".0-partials/root/head-links.ejs") -%>
+    <%- include ("./0-partials/root/head-links.ejs") -%>
 
     <title>Grapevine</title>
 </head>
@@ -11,13 +11,13 @@
 
 <body>
 <!-- STUB navbar -->
-    <%- include (".0-partials/root/navbar/0-navbar.ejs") -%>
+    <%- include ("./0-partials/root/navbar.ejs") -%>
     
 <!-- STUB main -->
     <main class="main"></main>
     
 <!--STUB Footer -->
-    <%- include (".0-partials/root/footer.ejs") -%>
+    <%- include ("./0-partials/root/footer.ejs") -%>
 
 </body>
 </html>
