--- a/views/profile/home.ejs
+++ b/views/profile/home.ejs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include ("..0-partials/root/head-links.ejs") -%>
+    <%- include ("../0-partials/root/head-links.ejs") -%>
     <title>Grapevine</title>
 </head>
 
 <body>
     <!-- NavBar -->
-    <%- include ("..0-partials/root/navbar.ejs") -%>
+    <%- include ("../0-partials/root/navbar.ejs") -%>
     
     <main class="main" style="min-height: 80vh;">
         <p> profile</p>
     </main>
     
     <!-- Footer -->
-    <%- include ("..0-partials/root/footer.ejs") -%>
+    <%- include ("../0-partials/root/footer.ejs") -%>
 </body>
 
 
