starts creating other routes to pages in browser

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,7 +5,7 @@
 <!-- STUB head-links -->
     <%- include ("./0-partials/root/head-links.ejs") -%>
 
-    <title>Grapevine</title>
+    <title>Grapevine | Home</title>
 </head>
 
 
