--- a/views/profile/home.ejs
+++ b/views/profile/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include ("../0-partials/root/head-links.ejs") -%>
-    <title>Grapevine</title>
+    <title>Grapevine | Profile</title>
 </head>
 
 <body>
