--- a/views/0-partials/root/navbar/dropdown-menu.ejs
+++ b/views/0-partials/root/navbar/dropdown-menu.ejs
@@ -13,7 +13,7 @@
     <div class="dropdown-menu" 
         aria-labelledby="navbarDropdown">
         <a class="dropdown-item" 
-            href="/profile/home">
+            href="/profile">
             My Profile
         </a>
         <a class="dropdown-item" 
