--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -10,13 +10,19 @@
 
 
 <body>
+    
 <!-- STUB navbar -->
     <%- include ("./0-partials/root/navbar.ejs") -%>
-    
-<!-- STUB main -->
-    <main class="main"></main>
-    
-<!--STUB Footer -->
+
+    <main class="landing-nav-header">
+    <!-- STUB jumbotron -->
+        <%- include ("./0-partials/landing/jumbotron.ejs") -%>
+
+    <!-- STUB values -->
+        <%- include ("./0-partials/landing/values.ejs") -%>
+    </main>
+
+<!--STUB footer -->
     <%- include ("./0-partials/root/footer.ejs") -%>
 
 </body>
