adjusts value cards on landing

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-<!-- STUB head-links -->
+    <!-- STUB head-links -->
     <%- include ("./0-partials/root/head-links.ejs") -%>
 
     <title>Grapevine | Home</title>
@@ -11,18 +11,20 @@
 
 <body>
     
-<!-- STUB navbar -->
+    <!-- STUB navbar -->
     <%- include ("./0-partials/root/navbar.ejs") -%>
 
-    <main class="landing-nav-header">
-    <!-- STUB jumbotron -->
+    <main class="jumbotron-body">
+        <!-- STUB jumbotron -->
         <%- include ("./0-partials/landing/jumbotron.ejs") -%>
 
-    <!-- STUB values -->
-        <%- include ("./0-partials/landing/values.ejs") -%>
+        <div class="values-body">   
+            <!-- STUB values -->
+            <%- include ("./0-partials/landing/values.ejs") -%>
+        </div>
     </main>
 
-<!--STUB footer -->
+    <!--STUB footer -->
     <%- include ("./0-partials/root/footer.ejs") -%>
 
 </body>
