--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -15,13 +15,18 @@ body {
   color: #7534ca;
 }
 
-.landing-nav-header {
-  background-color: rgba(245, 245, 245, 0.952);
-}
-
 .main {
   min-height: 80vh;
 }
+
+.jumbotron-body {
+  background-color: rgba(245, 245, 245, 0.952);
+}
+
+.values-body {
+  background-color: rgb(108, 0, 209);
+}
+
 
 .selector-for-some-widget {
   box-sizing: content-box;
