--- a/views/0-partials/landing/values.ejs
+++ b/views/0-partials/landing/values.ejs
@@ -3,7 +3,7 @@
 <div class="col-md-12">
 
     <div class="row">
-        <div class="card col-md-4" style="width: 18rem;">
+        <div class="card col-md-3 mx-auto" style="width: 18rem;">
             <div class="card-body text-center">
                 <h5 class="card-title">
                     Vision
@@ -11,7 +11,7 @@
                 Make online networking for job seeking professionals more transparent and humane.
             </div>
         </div>
-        <div class="card col-md-4" style="width: 18rem;">
+        <div class="card col-md-3 mx-auto" style="width: 18rem;">
             <div class="card-body text-center">
                 <h5 class="card-title">
                     Mission
@@ -19,7 +19,7 @@
                 Grapevine's mission is simple: create a platform where job seeking professionals can easily identify who to connect with from each company. 
             </div>
         </div>
-        <div class="card col-md-4" style="width: 18rem;">
+        <div class="card col-md-3 mx-auto " style="width: 18rem;">
             <div class="card-body text-center">
                 <h5 class="card-title">
                     Who are we?
