--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -1,6 +1,9 @@
+<br />
+
 <div class="col-md-12 landing-nav-body">
     <div class="row">
 
+        <!-- jumbotron -->
         <div class="col-md-7 home-paragraph">
             <div class="container">
                 <h1 class="display-4">
@@ -20,6 +23,9 @@
                 </p>
             </div>
         </div>
+        
+
+        <!-- SVG -->
         <div class="col home-paragraph">
             <div class="container">
                 <img src="" alt="undraw_professional_card">
@@ -29,5 +35,6 @@
     </div>
     
 </div>
+<br />
 
 
