--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -28,13 +28,13 @@
         <!-- SVG -->
         <div class="col home-paragraph">
             <div class="container">
-                <img src="" alt="undraw_professional_card">
+                <img src="/assets/undraw_images/undraw_professional_card_otb4.png" alt="undraw_professional_card">
             </div>
         </div>
 
     </div>
     
 </div>
-<br />
+<br /><br /><br />
 
 
