--- a/views/0-partials/landing/values.ejs
+++ b/views/0-partials/landing/values.ejs
@@ -1,10 +1,11 @@
-<br />
-<hr class="my-4" />
+<br /><br /><br />
 
 <div class="col-md-12">
 
+    <!-- vision -->
     <div class="row">
-        <div class="card col-md-3 mx-auto" style="width: 18rem;">
+        <div class="card col-md-3 mx-auto" 
+            style="width: 18rem;">
             <div class="card-body text-center">
                 <h5 class="card-title">
                     Vision
@@ -12,7 +13,8 @@
                 Make online networking for job seeking professionals more transparent and humane.
             </div>
         </div>
-        <div class="card col-md-3 mx-auto" style="width: 18rem;">
+        <div class="card col-md-3 mx-auto" 
+            style="width: 18rem;">
             <div class="card-body text-center">
                 <h5 class="card-title">
                     Mission
@@ -20,7 +22,8 @@
                 Grapevine's mission is simple: create a platform where job seeking professionals can easily identify who to connect with from each company. 
             </div>
         </div>
-        <div class="card col-md-3 mx-auto " style="width: 18rem;">
+        <div class="card col-md-3 mx-auto " 
+            style="width: 18rem;">
             <div class="card-body text-center">
                 <h5 class="card-title">
                     Who are we?
