--- a/views/0-partials/root/footer.ejs
+++ b/views/0-partials/root/footer.ejs
@@ -9,7 +9,7 @@
                     href="https://www.linkedin.com/in/rodrigo-marron/">
                         Grapevine by Rodrigo Marrón
                         <!-- Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-                        <img src="/assets/social_media_svg/linkedin.svg" alt="" />
+                        <img src="/assets/social_media_svg/linkedin.svg" alt="linkedin icon" id="linkedin"/>
                 </a>
             </ul>
         </div>
