--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -10,11 +10,11 @@
                     Welcome to Grapevine
                 </h1>
                 <p class="lead">
-                    The place where job seekers can easily identify who they need to connect with from a particular company for their next opportunity. Not only that, Grapevine users are people who are distinctly receptive and wanting to network online.
+                    The place where job seekers can easily identify who they need to connect in order to find their dream job. Not only that, Grapevine users are people who are distinctly receptive and wanting to network online.
                 </p>
                 <hr class="my-4">
                 <p>
-                    On Grapevine you'll feel encouraged to grow your network.
+                    With Grapevine you'll feel motivated to grow your network.
                 </p>
                 <p class="lead">
                     <a class="btn btn-info btn-lg" href="/" role="button">
@@ -26,9 +26,9 @@
         
 
         <!-- SVG -->
-        <div class="col home-paragraph">
-            <div class="container">
-                <img src="/assets/undraw_images/undraw_professional_card_otb4.png" alt="undraw_professional_card">
+        <div class="col-md-3 home-paragraph">
+            <div class="container" >
+                <img src="/assets/undraw_images/undraw_remote_meeting_cbfk.svg" alt="undraw_professional_card" id="undraw professional card">
             </div>
         </div>
 
