--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -10,7 +10,7 @@
                     Welcome to Grapevine
                 </h1>
                 <p class="lead">
-                    The place where job seekers can easily identify who they need to connect in order to find their dream job. Not only that, Grapevine users are people who are distinctly receptive and wanting to network online.
+                    The place where job seekers can easily identify who they need to connect in order to find their dream. Not only that, Grapevine users are people who are distinctly receptive and wanting to network online.
                 </p>
                 <hr class="my-4">
                 <p>
@@ -28,7 +28,7 @@
         <!-- SVG -->
         <div class="col-md-3 home-paragraph">
             <div class="container" >
-                <img src="/assets/undraw_images/undraw_remote_meeting_cbfk.svg" alt="undraw_professional_card" id="undraw professional card">
+                <img src="/assets/undraw_images/undraw_remote_meeting_cbfk.svg" alt="undraw_professional_card" id="undraw">
             </div>
         </div>
 
