--- a/views/0-partials/landing/values.ejs
+++ b/views/0-partials/landing/values.ejs
@@ -13,6 +13,8 @@
                 Make online networking for job seeking professionals more transparent and humane.
             </div>
         </div>
+
+        <!-- Mission -->
         <div class="card col-md-3 mx-auto" 
             style="width: 18rem;">
             <div class="card-body text-center">
@@ -22,6 +24,8 @@
                 Grapevine's mission is simple: create a platform where job seeking professionals can easily identify who to connect with from each company. 
             </div>
         </div>
+
+        <!-- who are we? -->
         <div class="card col-md-3 mx-auto " 
             style="width: 18rem;">
             <div class="card-body text-center">
