--- a/views/0-partials/root/footer.ejs
+++ b/views/0-partials/root/footer.ejs
@@ -1,5 +1,5 @@
 
-<footer class="card-footer ">
+<footer class="card-footer" id="headers-color">
     <div class="content has-text-centered">
         <div class="clearfix">
 
@@ -8,8 +8,9 @@
                 <a class="nav-link text-light float-right" 
                     href="https://www.linkedin.com/in/rodrigo-marron/">
                         Grapevine by Rodrigo Marrón
-                        <!-- Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-                        <img src="/assets/social_media_svg/linkedin.svg" alt="linkedin icon" id="linkedin"/>
+                    <img src="/assets/flaticon/linkedin.png" 
+                        alt="linkedin-icon" 
+                        id="linkedin" />
                 </a>
             </ul>
         </div>
