--- a/views/0-partials/root/navbar.ejs
+++ b/views/0-partials/root/navbar.ejs
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg card-header" />
+<nav class="navbar navbar-expand-lg card-header" id="headers-color" />
 
 <!--ANCHOR * navbar LEFT SIDE * -->
 
