--- a/views/0-partials/root/navbar/brand-name.ejs
+++ b/views/0-partials/root/navbar/brand-name.ejs
@@ -3,6 +3,7 @@
     <a 
         class="navbar-brand text-light"
         href="/">
+        <img src="/assets//logo/grapevine_grapevine.svg" alt="grapevine logo" id="navbar-logo">
         <strong> 
             Grapevine
         </strong>
