--- a/views/0-partials/root/navbar/modal-login.ejs
+++ b/views/0-partials/root/navbar/modal-login.ejs
@@ -53,7 +53,9 @@
                         <!--STUB Existing Member -->
                         <p class="subtitle has-text-grey modal-dialog">
                             New to Grapevine?
-                            <a href="/login" class="button is-link">
+                            <a href="registerModal"
+                            data-toggle="modal"
+                            class="button is-link">
                                 Register
                             </a>
                         </p>
