--- a/views/profile/home.ejs
+++ b/views/profile/home.ejs
@@ -6,14 +6,15 @@
 </head>
 
 <body>
-    <!-- NavBar -->
+    <!-- STUB NavBar -->
     <%- include ("../0-partials/root/navbar.ejs") -%>
     
-    <main class="main" style="min-height: 80vh;">
-        <p> profile</p>
-    </main>
     
-    <!-- Footer -->
+    <!-- STUB profile card -->
+    <%- include ("../0-partials/profile/card.ejs") -%>
+    
+    
+    <!-- STUB Footer -->
     <%- include ("../0-partials/root/footer.ejs") -%>
 </body>
 
