--- a/views/0-partials/root/navbar/dropdown-menu.ejs
+++ b/views/0-partials/root/navbar/dropdown-menu.ejs
@@ -14,11 +14,11 @@
         aria-labelledby="navbarDropdown">
         <a class="dropdown-item" 
             href="/profile">
-            My Profile
+            Profile
         </a>
         <a class="dropdown-item" 
             href="/mailbox">
-            My Inbox
+            Mailbox
         </a>
 
         <div class="dropdown-divider">         
@@ -26,7 +26,7 @@
         
         <a class="dropdown-item" 
             href="/show-all">
-            Search Leafs
+            Search Grapevine
         </a>
     </div>
 </li>
