further changes to profile page

--- a/views/0-partials/profile/card.ejs
+++ b/views/0-partials/profile/card.ejs
@@ -2,6 +2,7 @@
 <div class="md-12 landing-nav-body">
     <div class="row">
 
+
         <!-- STUB profile picture -->
         <div class="col-md-4 home-paragraph">
             <div class="container">
@@ -21,17 +22,52 @@
             <div class="container">
 
                 <div class="card shadow-lg ml-4 mt-4 rounded" 
-                    style="width: 40rem;">
-                    <div class="card-body profile-body">
-                        <h5 class="card-title">
-                            Name: <%= profile.fullName =%>
-                        </h5>
+                    style="width: 25rem;">
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            Name: 
+                        </h4>
+                        <hr class="my-2" />
+                        <div class="card-content">
+                            <br />
+                            <h6>
+                                Current Position:
+                            </h6>
+                            <br />
+                            <h6>
+                                Company:
+                            </h6>
+                            <br />
+                            <h6>
+                                Location:
+                            </h6>
+                            
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
+    </div>
+</div>
 
 
+<!-- STUB About -->
+<div class="col-md-12 landing-nav-body">
+    <div class="row">
+
+        <div class="col-md-10 home-paragraph" >
+            <div class="container">
+
+                <div class="card shadow-lg  mt-4 rounded" 
+                    style="width: 50rem;">
+                    <div class="card-body profile-body">
+                        Introduction
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
     </div>
 </div>
