--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -45,19 +45,11 @@ body {
 
 .card-profile-img {
   display: block;
-  margin: 0 auto;
-  width: 250px;
+  margin: 10px auto;
+  width: 75%;
+  height: 75%;
   border-radius: 50%;
-  border: 15px solid rgba(245, 245, 245, 0.952);
-}
-
-.card-profile-body {
-  margin: 0;
-  height: auto;
-  font-family: Helvetica, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border: 10px solid rgba(245, 245, 245, 0.952);
 }
 
 
