adds auth controllers and routes

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -14,7 +14,7 @@
     <!-- STUB navbar -->
     <%- include ("./0-partials/root/navbar.ejs") -%>
 
-    <main class="jumbotron-body">
+    <main class="main">
         <!-- STUB jumbotron -->
         <%- include ("./0-partials/landing/jumbotron.ejs") -%>
 
