--- a/views/profile/home.ejs
+++ b/views/profile/home.ejs
@@ -9,10 +9,10 @@
     <!-- STUB NavBar -->
     <%- include ("../0-partials/root/navbar.ejs") -%>
     
-    
-    <!-- STUB profile card -->
-    <%- include ("../0-partials/profile/card.ejs") -%>
-    
+    <main class="main">
+        <!-- STUB profile card -->
+        <%- include ("../0-partials/profile/card.ejs") -%>
+    </main>
     
     <!-- STUB Footer -->
     <%- include ("../0-partials/root/footer.ejs") -%>
