lots of changes. point of fresh start on new branch

--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -10,7 +10,7 @@
                     Welcome to Grapevine
                 </h1>
                 <p class="lead">
-                    The place where job seekers can easily identify who they need to connect in order to find their dream. Not only that, Grapevine users are people who are distinctly receptive and wanting to network online.
+                    The place where job seekers can easily identify who they need to connect with to find their dream. Grapevine users are people who are distinctly receptive and wanting to network online.
                 </p>
                 <hr class="my-4">
                 <p>
