--- a/views/0-partials/profile/card.ejs
+++ b/views/0-partials/profile/card.ejs
@@ -42,6 +42,7 @@
                                 Location:
                             </h6>
                             
+                            
                         </div>
                     </div>
                 </div>
@@ -65,6 +66,9 @@
                         Introduction
                     </div>
                 </div>
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#profileEditModal">
+                    Edit
+                </button>
             </div>
         </div>
 
