--- a/views/0-partials/root/navbar/dropdown-menu.ejs
+++ b/views/0-partials/root/navbar/dropdown-menu.ejs
@@ -25,7 +25,7 @@
         </div>
         
         <a class="dropdown-item" 
-            href="/show-all">
+            href="/profile">
             Search Grapevine
         </a>
     </div>
