renames all partials and views folders. changes model name from invitation to message

--- a/views/0-partials/landing/jumbotron.ejs
+++ b/views/0-partials/landing/jumbotron.ejs
@@ -1,6 +1,6 @@
 <br />
 
-<div class="col-md-12 landing-nav-body">
+<div class="col-md-12 landing-page-nav-body">
     <div class="row">
 
         <!-- jumbotron -->
