--- a/views/0-partials/profile/card.ejs
+++ b/views/0-partials/profile/card.ejs
@@ -1,5 +1,5 @@
 
-<div class="md-12 landing-nav-body">
+<div class="md-12 landing-page-nav-body">
     <div class="row">
 
 
@@ -54,7 +54,7 @@
 
 
 <!-- STUB About -->
-<div class="col-md-12 landing-nav-body">
+<div class="col-md-12 landing-page-nav-body">
     <div class="row">
 
         <div class="col-md-10 home-paragraph" >
