reconnects to landing page. rendering correctly

--- a/views/message-pages/edit.ejs
+++ b/views/message-pages/edit.ejs
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-    
+<html lang="en"> 
 <head>
-<!-- STUB head-links -->
+    <!-- STUB head-links -->
     <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
 
-    <title>Grapevine | Search</title>
+    <title>Show Message</title>
 </head>
 
 
 <body>
-<!-- STUB navbar -->
+    <!-- STUB navbar -->
     <%- include ("../0-partials/headers-sum/navbar.ejs") -%>
- 
-<!-- STUB main -->
-    <main class="main"></main>
+
+
+    <!-- STUB main -->
+    <main class="main">Show One</main>
     
-<!--STUB Footer -->
+
+    <!--STUB Footer -->
     <%- include ("../0-partials/headers-sum/footer.ejs") -%>
 
+    
 </body>
 </html>
