--- a/views/message-pages/new.ejs
+++ b/views/message-pages/new.ejs
@@ -2,22 +2,24 @@
 <html lang="en">
 <head>
     <!-- STUB head-links -->
-    <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
+    <%- include ("./0-partials/headers-sum/head-links.ejs") -%>
 
-    <title>All Messages</title>
+    <title>New Message</title>
 </head>
 
 
 <body>
     <!-- STUB navbar -->
     <%- include ("../0-partials/headers-sum/navbar.ejs") -%>
-    
+
+
     <!-- STUB main -->
-    <main class="main">mailbox</main>
+    <main class="main">New</main>
     
+
     <!--STUB Footer -->
     <%- include ("../0-partials/headers-sum/footer.ejs") -%>
 
-    
+
 </body>
 </html>
