--- a/views/message-pages/show.ejs
+++ b/views/message-pages/show.ejs
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- STUB head-links -->
     <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
-    <title>Grapevine | Profile</title>
+
+    <title>Show Message</title>
 </head>
 
+
 <body>
-    <!-- STUB NavBar -->
+    <!-- STUB navbar -->
     <%- include ("../0-partials/headers-sum/navbar.ejs") -%>
 
 
-    <main class="main">
-        <!-- STUB profile card -->
-        <%- include ("../0-partials/profile/card.ejs") -%>
+    <!-- STUB main -->
+    <main class="main">Show One</main>
+    
 
-
-    </main>
-
-    <!-- STUB Footer -->
+    <!--STUB Footer -->
     <%- include ("../0-partials/headers-sum/footer.ejs") -%>
+
 </body>
-
-
 </html>
