connects to profiles/index page successfully

--- a/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
+++ b/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
@@ -17,7 +17,7 @@
             Profile
         </a>
         <a class="dropdown-item" 
-            href="/mailbox">
+            href="/messages">
             Mailbox
         </a>
 
@@ -25,7 +25,7 @@
         </div>
         
         <a class="dropdown-item" 
-            href="/profile">
+            href="#">
             Search Grapevine
         </a>
     </div>
