--- a/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
+++ b/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
@@ -13,7 +13,7 @@
     <div class="dropdown-menu" 
         aria-labelledby="navbarDropdown">
         <a class="dropdown-item" 
-            href="/profile">
+            href="#">
             Profile
         </a>
         <a class="dropdown-item" 
