--- a/views/message-pages/index.ejs
+++ b/views/message-pages/index.ejs
@@ -13,7 +13,13 @@
     <%- include ("../0-partials/headers-sum/navbar.ejs") -%>
     
     <!-- STUB main -->
-    <main class="main">mailbox</main>
+    <main class="main">
+        mailbox
+        <h3 class="label">No messages yet?</h3>
+        <a href="/newMessage">Create Message</a>
+
+    </main>
+
     
     <!--STUB Footer -->
     <%- include ("../0-partials/headers-sum/footer.ejs") -%>
