--- a/views/profile-pages/index.ejs
+++ b/views/profile-pages/index.ejs
@@ -14,6 +14,9 @@
         <!-- STUB profile card -->
         <%- include ("../0-partials/profile/card.ejs") -%>
 
+        <!-- STUB new profile card -->
+        <%- include ("../0-partials/profile/new-card.ejs") -%>
+
 
     </main>
 
