--- a/views/0-partials/headers-sum/head-links.ejs
+++ b/views/0-partials/headers-sum/head-links.ejs
@@ -13,8 +13,8 @@
 
 
 <!-- local CSS files -->
+<link rel="stylesheet" href="/styles/profile-card.css">
 <link rel="stylesheet" href="/styles/main.css">
-<link rel="stylesheet" href="/styles/bttn.css">
 
 
 <!-- local script file -->
