adds new message page

--- a/views/message-pages/index.ejs
+++ b/views/message-pages/index.ejs
@@ -16,7 +16,7 @@
     <main class="main">
         mailbox
         <h3 class="label">No messages yet?</h3>
-        <a href="/newMessage">Create Message</a>
+        <a href="/messages/new">Create Message</a>
 
     </main>
 
