--- a/views/message-pages/new.ejs
+++ b/views/message-pages/new.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- STUB head-links -->
-    <%- include ("./0-partials/headers-sum/head-links.ejs") -%>
+    <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
 
     <title>New Message</title>
 </head>
@@ -14,7 +14,27 @@
 
 
     <!-- STUB main -->
-    <main class="main">New</main>
+    <main class="main">
+        New message
+
+
+    
+            <!-- Form -->
+            <br><br>
+            <label class="label">Write your message:</label>
+            </div class="control">
+            <form action="/messages" method="POST">
+            <input class="" type="text" name="name" placeholder="Message" /> 
+            <br />
+            </div>
+            <br>
+            <!-- Create Message button -->
+            <div class="control">
+                <button type="button" class="btn btn-sm btn-info" ">Create New Message</button>
+            </div>
+
+
+    </main>
     
 
     <!--STUB Footer -->
