starts routes for message

--- a/views/message-pages/new.ejs
+++ b/views/message-pages/new.ejs
@@ -17,22 +17,30 @@
     <main class="main">
         New message
 
+        <!--STUB Form -->
+        <br /><br />
+        <label class="label">
+            Write your message:
+        </label>
+        <div class="control">
+            <form action="/messages" 
+                method="POST">
+                <input class="" 
+                    type="text" 
+                    name="name" 
+                    placeholder="Message" /> 
+                <br />
+            </form>
+        </div>
+        <br />
 
-    
-            <!-- Form -->
-            <br><br>
-            <label class="label">Write your message:</label>
-            </div class="control">
-            <form action="/messages" method="POST">
-            <input class="" type="text" name="name" placeholder="Message" /> 
-            <br />
-            </div>
-            <br>
-            <!-- Create Message button -->
-            <div class="control">
-                <button type="button" class="btn btn-sm btn-info" ">Create New Message</button>
-            </div>
-
+        <!--STUB Create Message button -->
+        <div class="control">
+            <button type="button" 
+                class="btn btn-sm btn-info" ">
+                Create New Message
+            </button>
+        </div>
 
     </main>
     
