creates message on browser and stylizes new message page

--- a/views/0-partials/headers-sum/head-links.ejs
+++ b/views/0-partials/headers-sum/head-links.ejs
@@ -18,7 +18,7 @@
 
 
 <!-- local script file -->
-<script src="../../../public/scripts/app.js" defer></script>
+<!-- <script src="/scripts/app.js" defer></script> -->
 
 
 <!-- font awesome -->
