--- a/views/message-pages/new.ejs
+++ b/views/message-pages/new.ejs
@@ -15,32 +15,9 @@
 
     <!-- STUB main -->
     <main class="main">
-        New message
-
-        <!--STUB Form -->
-        <br /><br />
-        <label class="label">
-            Write your message:
-        </label>
-        <div class="control">
-            <form action="/messages" 
-                method="POST">
-                <input class="" 
-                    type="text" 
-                    name="name" 
-                    placeholder="Message" /> 
-                <br />
-            </form>
-        </div>
-        <br />
-
-        <!--STUB Create Message button -->
-        <div class="control">
-            <button type="button" 
-                class="btn btn-sm btn-info" ">
-                Create New Message
-            </button>
-        </div>
+        
+        <!-- STUB Message form -->
+        <%- include ("../0-partials/message/new-message.ejs") -%>
 
     </main>
     
