--- a/views/message-pages/show.ejs
+++ b/views/message-pages/show.ejs
@@ -14,7 +14,7 @@
 
 
     <!-- STUB main -->
-    <main class="main">Show One</main>
+    <main class="main">Show Message</main>
     
 
     <!--STUB Footer -->
