--- a/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
+++ b/views/0-partials/headers-sum/navbar/dropdown-menu.ejs
@@ -13,7 +13,7 @@
     <div class="dropdown-menu" 
         aria-labelledby="navbarDropdown">
         <a class="dropdown-item" 
-            href="#">
+            href="/profile">
             Profile
         </a>
         <a class="dropdown-item" 
@@ -23,7 +23,6 @@
 
         <div class="dropdown-divider">         
         </div>
-        
         <a class="dropdown-item" 
             href="#">
             Search Grapevine
