--- a/views/message-pages/edit.ejs
+++ b/views/message-pages/edit.ejs
@@ -4,7 +4,7 @@
     <!-- STUB head-links -->
     <%- include ("../0-partials/headers-sum/head-links.ejs") -%>
 
-    <title>Show Message</title>
+    <title>Edit Message</title>
 </head>
 
 
@@ -14,7 +14,7 @@
 
 
     <!-- STUB main -->
-    <main class="main">Show One</main>
+    <main class="main">Edit One</main>
     
 
     <!--STUB Footer -->
