adds updates to new message. error at show message

--- a/views/message-pages/show.ejs
+++ b/views/message-pages/show.ejs
@@ -14,7 +14,12 @@
 
 
     <!-- STUB main -->
-    <main class="main">Show Message</main>
+    <main class="main">
+        
+        <!-- STUB show message -->
+        <%- include ("../0-partials/message/show-message.ejs") -%>
+
+    </main>
     
 
     <!--STUB Footer -->
