--- a/views/0-partials/headers-sum/navbar.ejs
+++ b/views/0-partials/headers-sum/navbar.ejs
@@ -57,7 +57,7 @@
             <li class="nav-item">
                 <a type="submit"
                     class="nav-link text-light" 
-                    href="{% url 'logout' %}">
+                    href="#">
                     Log out
                 </a>
             </li>
