--- a/views/0-partials/message/show-message.ejs
+++ b/views/0-partials/message/show-message.ejs
@@ -4,27 +4,21 @@
         <!-- STUB Header -->
         <div class="card shadow-lg ml-5 mt-4 rounded" 
             style="width: 40rem;">
-            <div class="card-header alert alert-info">
-                New Message
+            <div class="card-header alert alert-light">
+                Show Message
             </div>
             <div class="card-body">                
                 <form action="/messages" 
                 method="POST">
-                    <textarea class="form-control" 
-                        name="content" 
-                        placeholder="Type in your message" 
-                        rows="3" 
-                        style="margin-bottom:30px;">
-                    </textarea>
-                    <h6 class="pull-right" 
-                        id="counter">
-                        300 characters max.
-                    </h6>
+                    <p>
+                        <%= message.content %>
+                    </p>
+                    
                     
                     <!-- STUB new message button -->
                     <button type="submit" 
                         class="btn btn-sm btn-info">
-                        Post!
+                        Edit Post
                     </button>
 
                     <!-- STUB cancel button -->
